[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/AudioController-HammerGun-PrimaryFire.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/egon_run3.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/egon_off1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/egon_windup2.wav" type="AudioStream" id=4]

[node name="AudioController" type="Node"]
script = ExtResource( 1 )

[node name="WindUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Run" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="WindDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="finished" from="WindUp" to="." method="_on_WindUp_finished"]
